# pendulums-report-maker

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main  main.cpp  main.hpp  pendulumus-export-2-2023.csv
main.dSYM/Contents/Resources/DWARF/: main
